fecha: jueves 06 de Octubre

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <a href="#">Nick</a>
+                <a href="#">Maycol</a>
             </div>
             <nav id="nav">
                 <ul>
                     <li><a href="#inicio" onclick="seleccionar()">INICIO</a></li>
                     <li><a href="#sobremi" onclick="seleccionar()">SOBRE MI</a></li>
-                    <li><a href="#skills" onclick="seleccionar()">SKILLS</a></li>
-                    <li><a href="#curriculum" onclick="seleccionar()">CURRICULUM</a></li>
+                    <li><a href="#abilidades" onclick="seleccionar()">HABILIDADES</a></li>
+                    <li><a href="#curriculum" onclick="seleccionar()">CURRICULO</a></li>
                     <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
                     <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
                 </ul>
@@ -37,14 +37,14 @@
             <div class="contenedor-img">
                 <img src="img/hero.png" alt="">
             </div>
-            <h1>NICK PEREZ</h1>
-            <h2>Ingeniero de Software - Experto UI/UX</h2>
+            <h1>MAYCOL HUARCAYA</h1>
+            <h2>Diseñador Web - Experto UI/UX</h2>
             <div class="redes">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-skype"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-solid fa-rss"></i></a>
+                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#"><i class="fa-brands fa-wordpress"></i></a>
             </div>
         </div>
     </section>
@@ -53,7 +53,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Nick Perez.</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam unde soluta minima necessitatibus, voluptas consectetur vero officiis quas, explicabo deleniti repellendus aliquid debitis maiores numquam voluptate reprehenderit in delectus dolores.</p>
+            <p><span>Hola, Soy Maycol Edgar.</span> hola yo soy un desiñador experto que se dedica a Diseño de páginas web y tiendas virtuales capaces de generar oportunidades de negocio. Diseñamos Paginas Web y tienda virtual listas para llevarte al siguiente nivel.</p>
 
             <div class="fila">
                 <!-- datos personales -->
@@ -62,27 +62,27 @@
                     <ul>
                         <li>
                             <strong>Cumpleaños</strong>
-                            15-01-1980
+                            04-04-2003
                         </li>
                         <li>
                             <strong>Teléfono</strong>
-                            2555 5454545
+                            900579490
                         </li>
                         <li>
                             <strong>Email</strong>
-                            cw@example.com
+                            maycoledgar04@gmail.com
                         </li>
                         <li>
                             <strong>Website</strong>
-                            www.example.com
+                            www.maycoledgar04.com
                         </li>
                         <li>
                             <strong>Dirección</strong>
-                            123 San Luis, Argentina
+                            Jr.Laramate-Puquio, Perú.
                         </li>
                         <li>
                             <strong>Cargo</strong>
-                            <span>FREELANCE</span>
+                            <span>Diseñador</span>
                         </li>
                     </ul>
                 </div>
@@ -137,16 +137,16 @@
     <!-- SECCION SKILLS -->
     <section class="skills" id="skills">
         <div class="contenido-seccion">
-            <h2>Skills</h2>
+            <h2>HABILIDADES</h2>
             <div class="fila">
                 <!-- Technical Skill -->
                 <div class="col">
-                    <h3>Technical Skills</h3>
+                    <h3>HABILIDADES TECNICAS</h3>
                     <div class="skill">
                         <span>Javascript</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>75%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                         <span>HTML & CSS</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>89%</span>
+                                <span>90%</span>
                             </div>
                         </div>
                     </div>
@@ -175,17 +175,17 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Drupa</span>
+                        <span>Corel Draw</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>55%</span>
+                                <span>60%</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- Professional Skills -->
                 <div class="col">
-                    <h3>Professional Skills</h3>
+                    <h3>HABILIDADES PROFESIONALES</h3>
                     <div class="skill">
                         <span>Comunicación</span>
                         <div class="barra-skill">
@@ -219,10 +219,10 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Proyect Management</span>
+                        <span>Gestión de Proyectos</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>94%</span>
+                                <span>90%</span>
                             </div>
                         </div>
                     </div>
@@ -234,33 +234,33 @@
     <!-- SECCION CURRICULUM -->
     <section id="curriculum" class="curriculum">
         <div class="contenido-seccion">
-            <h2>Curriculum</h2>
+            <h2>CURRICULO</h2>
             <div class="fila">
                 <div class="col izquierda">
-                    <h3>Educación</h3>
+                    <h3>EDUCACIÓN</h3>
                     <div class="item izq">
-                        <h4>Arte y Multimedia</h4>
-                        <span class="casa">Universidad de Oxford</span>
-                        <span class="fecha">2005 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <h4>ARTE Y MULTIMEDIA</h4>
+                        <span class="casa">I.E.S.T.P "JOSE MARIA ARGUEDAS"</span>
+                        <span class="fecha">2020 - 2022</span>
+                        <p>técnica de combinar varios medios en una sola composición. A veces, se denomina se le denomina "técnica mixta".</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
                     </div>
                     <div class="item izq">
-                        <h4>Arte y Multimedia</h4>
-                        <span class="casa">Universidad de Oxford</span>
-                        <span class="fecha">2005 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <h4>PROYECTO EMPRESARIAL</h4>
+                        <span class="casa">I.E.S.T.P "JOSE MARIA ARGUEDAS"</span>
+                        <span class="fecha">2020 - 2022</span>
+                        <p>proyecto empresarial exige un proceso de reflexión que se debe plasmar en un plan de negocio, que es una planificación estratégica que afecta a todos los ámbitos de la empresa y en el que se analiza la viabilidad del proyecto empresarial que se pretende llevar a cabo.</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
                     </div>
                     <div class="item izq">
-                        <h4>Arte y Multimedia</h4>
-                        <span class="casa">Universidad de Oxford</span>
-                        <span class="fecha">2005 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <h4>DISEÑO WEB</h4>
+                        <span class="casa">I.E.S.T.P "JOSE MARIA ARGUEDAS"</span>
+                        <span class="fecha">2020 - 2022</span>
+                        <p>Diseño Web es un área enfocada en el desarrollo de interfaces digitales, como el diseño de sitios y aplicaciones para web. </p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
@@ -268,30 +268,30 @@
                 </div>
 
                 <div class="col derecha">
-                    <h3>Experiencia de trabajo</h3>
+                    <h3>EXPERIENCIA DE TRABAJO</h3>
                     <div class="item der">
-                        <h4>Front Developer</h4>
-                        <span class="casa">Nombre de Compañía</span>
-                        <span class="fecha">2005 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <h4>EXCEL</h4>
+                        <span class="casa">MUNICIPALIDAD</span>
+                        <span class="fecha">2020 - 2021</span>
+                        <p>BASEAO DE DATOS Y EXPEDIENTES DE LOS TRABAJADORES TANTO EL SUELDO AL MES COMO EL DESCUENTO POR FALTAS, TAMBIEN ALGUNA TABULACION DE INFO.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
                     <div class="item der">
-                        <h4>Front Developer</h4>
-                        <span class="casa">Nombre de Compañía</span>
+                        <h4>WORD</h4>
+                        <span class="casa">I.E.S.P "MANUEL SEOANE CORRALES"</span>
                         <span class="fecha">2005 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <p>DATOS DE TRABAJDORES DEL COLEGIO, CITACIONES, INFORME DE PETICIÓN, ETC.</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
                     <div class="item der">
-                        <h4>Front Developer</h4>
-                        <span class="casa">Nombre de Compañía</span>
+                        <h4>INFORMES EN WORD</h4>
+                        <span class="casa">HOSPITAL PUQUIO</span>
                         <span class="fecha">2005 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <p>INFORMES Y DATOS PERSONALES DE LOS PACIENTES RECIBIDOS, FIRMAS DE LOS DOCTORES O OBTETRAS (ENCARGADOS.)</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
@@ -307,44 +307,44 @@
             <h2>PORTFOLIO</h2>
             <div class="galeria">
                 <div class="proyecto">
-                    <img src="img/p1.jpg" alt="">
+                    <img src="img/p1.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
+                        <h3>DISEÑO WEB</h3>
                         <p>Fotografía</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p2.jpg" alt="">
+                    <img src="img/p2.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
+                        <h3>ESTUDIANTES</h3>
                         <p>Fotografía</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p3.jpg" alt="">
+                    <img src="img/p3.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
+                        <h3>Puerta principal tecnologíco</h3>
                         <p>Fotografía</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p4.jpg" alt="">
+                    <img src="img/p4.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
+                        <h3>Patio principal</h3>
                         <p>Fotografía</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p5.jpg" alt="">
+                    <img src="img/p5.png" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
+                        <h3>Diseño de portada</h3>
                         <p>Fotografía</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p6.jpg" alt="">
+                    <img src="img/p6.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
+                        <h3>Movilidad</h3>
                         <p>Fotografía</p>
                     </div>
                 </div>
@@ -376,15 +376,15 @@
                         <ul>
                             <li>
                                 <i class="fa-solid fa-location-dot"></i>
-                                Nicaragua 159, San Rafael Mza
+                                Jr.9 de Diciembre-puquio.
                             </li>
                             <li>
                                 <i class="fa-solid fa-mobile-screen"></i>
-                                Llamanos: 2384 - 4343443 
+                                Llamanos: 900579490
                             </li>
                             <li>
                                 <i class="fa-solid fa-envelope"></i>
-                                Email: cw@example.com
+                                Email: maycoledgar04@gmail.com
                             </li>
                         </ul>
                     </div>
@@ -400,10 +400,10 @@
         </a>
         <div class="redes">
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-skype"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="#"><i class="fa-solid fa-rss"></i></a>
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            <a href="#"><i class="fa-brands fa-wordpress"></i></a>
         </div>
     </footer>
 
